fix some xml data bugs

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 spark-warehouse/
 src/main/resources/
 src/test/
-target/generated-sources/
+target/
 target/classes/CooperateAuthor$.class
 target/classes/CooperateAuthor.class
 target/classes/CooperateSecondAuthor$.class
